--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     },
     "dependencies": {
         "chalk": "^2.1.0",
+        "generator-node": "^2.3.0",
         "inquirer-npm-name": "^3.0.0",
         "yeoman-generator": "^2.0.1",
         "yosay": "^2.0.1"
